--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,11 @@ dependencies:
     sdk: flutter
   image_picker: ^1.1.2
   imagekit: ^0.0.5
+  intl: ^0.19.0
+  permission_handler: ^11.3.1
   provider: ^6.1.2
   uuid: ^4.5.1
+  video_player: ^2.9.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
