--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.19.0
   permission_handler: ^11.3.1
   provider: ^6.1.2
+  story_view: ^0.16.5
   uuid: ^4.5.1
   video_player: ^2.9.2
 dev_dependencies:
